[project]
name = "hikari-ryoshu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "attrs>=24.2.0",
    "hikari>=2.1.0",
]

[project.scripts]
example = "scripts.example:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "hikari-tanjun>=2.17.6",
    "pyright>=1.1.389",
    "python-dotenv>=1.0.1",
    "ruff>=0.7.3",
]

[tool.ruff]
line-length = 120

[tool.hatch.build.targets.wheel]
packages = ["src/ryoshu", "scripts"]

[tool.pyright]
typeCheckingMode = "strict"