[project]
name = "hikari-ryoshu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "attrs>=24.2.0",
    "hikari>=2.1.0",
]

[tool.uv]
dev-dependencies = [
    "hikari-tanjun>=2.17.6",
    "pyright>=1.1.389",
    "python-dotenv>=1.0.1",
    "ruff>=0.7.3",
]

[project.scripts]
example = "scripts.example:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ryoshu", "scripts"]

target-version = "py39"

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = [
    "ALL",  # Include everything, including new rules.
]
ignore = [
    "D",  # Ignore docstrings for the time being.
    "D105",  # __magic_method__ docstrings.
    "D107",  # __init__ docstrings.
    "FA100",  # Not a fan of using future annotations to early-access syntax.
    "FIX",  # TODO-comments are to-do for a reason.
    "PD",  # No pandas to be seen here.
    "PLC0414",  # reexports through from x import y as y.
    "PYI041",  # int | float typehints.
    "S101",  # Assert statements; we use these mainly for type assertions.
    "TD",  # TODO-comments are to-do for a reason.
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F403"]
"scripts/*.py" = ["INP001", "T201"]
"examples/*.py" = ["INP001", "ARG001", "PLR2004"]

[tool.ruff.lint.pep8-naming]
extend-ignore-names = ["metacls"]

[tool.pyright]
typeCheckingMode = "strict"
# disableBytesTypePromotions = true